--- a/game365-core/pom.xml
+++ b/game365-core/pom.xml
@@ -116,6 +116,11 @@
             <artifactId>jsoup</artifactId>
             <version>1.11.2</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.2.4</version>
+        </dependency>
         <!-- provice by apache poi end -->
 
 		<!-- <dependency>
